--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^5.11.0",
-    "@upstash/redis": "^1.28.4",
-    "ansi-regex": "^6.0.1",
-    "body-parser": "^1.20.2",
     "bullmq": "^5.4.3",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "has-ansi": "^5.0.1",
-    "ioredis": "^5.3.2",
-    "strip-ansi": "^7.1.0"
+    "ioredis": "^5.3.2"
   },
   "scripts": {
     "build": "tsc -b",
