--- a/server/Docker/java/Dockerfile
+++ b/server/Docker/java/Dockerfile
@@ -4,4 +4,4 @@ WORKDIR /judge/
 
 
 
-CMD ["sh", "-c", "javac code.java && java code"]
+CMD ["sh", "-c", "javac *.java && java $(basename *.java .java)"]
